--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,6 +3,7 @@ name: Deploy Web (Vite → GitHub Pages)
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -11,7 +12,7 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -23,9 +24,9 @@ jobs:
           node-version: 20
       - run: npm ci
       - name: Build
-        # Repo-Name beachten! Bei dir: QueueFlow
+        # Repo-Name prüfen! Bei dir: QueueFlow
         run: npm run build -- --base=/QueueFlow/
-      # SPA-Fallback: 404.html -> index.html
+      # SPA-Fallback, damit Refresh nicht 404 liefert
       - name: SPA fallback
         run: cp dist/index.html dist/404.html
       - uses: actions/upload-pages-artifact@v3
@@ -39,5 +40,6 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      - uses: actions/configure-pages@v5
       - id: deployment
         uses: actions/deploy-pages@v4
